@@ -20,8 +20,9 @@ if (!localStorage["enable_links"]) localStorage["enable_links"] = "true"
 if (!localStorage["enable_tabs"]) localStorage["enable_tabs"] = "true"
 if (!localStorage["enable_ads"]) localStorage["enable_ads"] = "true"
 if (!localStorage["enable_ping"]) localStorage["enable_ping"] = "false"
-if (!localStorage["ping_success_color"]) localStorage["ping_success_color"] = "DCFBD1"
-if (!localStorage["ping_failure_color"]) localStorage["ping_failure_color"] = "FFDDDD"
+if (!localStorage["ping_success_color"]) localStorage["ping_success_color"] = "#DCFBD1"
+if (!localStorage["ping_failure_color"]) localStorage["ping_failure_color"] = "#FFDDDD"
+if (!localStorage["enable_color_chooser"]) localStorage["enable_color_chooser"] = "false"
 
 ///////// GINYAS ///////////
 
