@@ -112,8 +112,9 @@ var jscolor = {
 
 	loadImage : function(filename) {
 		if(!jscolor.imgLoaded[filename]) {
-			jscolor.imgLoaded[filename] = new Image();
-			jscolor.imgLoaded[filename].src = jscolor.getDir()+filename;
+		    jscolor.imgLoaded[filename] = new Image();
+            // I CHANGED THIS LINE
+			jscolor.imgLoaded[filename].src = chrome.extension.getURL('lib/' + filename);
 		}
 	},
 
@@ -723,11 +724,12 @@ var jscolor = {
 				case 0: var padImg = 'hs.png'; break;
 				case 1: var padImg = 'hv.png'; break;
 			}
-			p.padM.style.backgroundImage = "url('"+jscolor.getDir()+"cross.gif')";
+            // I CHANGED URLS BELOW
+			p.padM.style.backgroundImage = "url('" + chrome.extension.getURL("lib/cross.gif") + "')";
 			p.padM.style.backgroundRepeat = "no-repeat";
-			p.sldM.style.backgroundImage = "url('"+jscolor.getDir()+"arrow.gif')";
+			p.sldM.style.backgroundImage = "url('" + chrome.extension.getURL("lib/arrow.gif") + "')";
 			p.sldM.style.backgroundRepeat = "no-repeat";
-			p.pad.style.backgroundImage = "url('"+jscolor.getDir()+padImg+"')";
+			p.pad.style.backgroundImage = "url('" + chrome.extension.getURL("lib/" + padImg) + "')";
 			p.pad.style.backgroundRepeat = "no-repeat";
 			p.pad.style.backgroundPosition = "0 0";
 
