@@ -3,7 +3,7 @@
   "version" : "2.3.0",
   "description" : "Infinite scroll for Google search results and a lot of other improvements to your browser experience.",
   "background_page" : "background.html",
-  "content_scripts" : [{"matches":["*://*/*"],"js":["lib/jquery-1.7.min.js","lib/xpath.js","js/gInfinity.js"]}],
+  "content_scripts" : [{"matches":["*://*/*"],"js":["lib/jquery-1.7.min.js","lib/xpath.js","lib/jscolor.js","js/gInfinity.js"]}],
   "options_page": "options.html",
   "permissions": [
     "contextMenus",
